Preserve order of rel attributes (#336)